<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/teamFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background">

    <TextView
        android:id="@+id/text_team"
        style="@style/Text_Medium_22_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_19"
        android:text="@string/text_team"
        android:textColor="?attr/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_worked_application"
        style="@style/Text_Bold_32_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_43"
        android:text="@string/text_developer_worker"
        android:textColor="?attr/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_team" />

    <TextView
        android:id="@+id/text_developer_name_first"
        style="@style/Text_Medium_16_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_32"
        android:text="@string/text_developer_name_first"
        android:textColor="?attr/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_worked_application"

        />

    <TextView
        android:id="@+id/text_developer_name_second"
        style="@style/Text_Medium_16_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/text_developer_name_second"
        android:textColor="?attr/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_developer_name_first" />

    <TextView
        android:id="@+id/text_developer_name_third"
        style="@style/Text_Medium_16_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/text_developer_name_third"
        android:textColor="?attr/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_developer_name_second" />

    <TextView
        android:id="@+id/text_developer_name_four"
        style="@style/Text_Medium_16_500"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        android:text="@string/text_developer_name_four"
        android:textColor="?attr/text_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_developer_name_third" />

</androidx.constraintlayout.widget.ConstraintLayout>