<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton
        android:id="@+id/btn_back"
        android:layout_height="@dimen/margin_24"
        android:layout_width="@dimen/margin_24"
        android:background="@null"
        android:src="@drawable/back_btn"
        android:layout_marginTop="@dimen/margin_16"
        android:layout_marginStart="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
    <TextView
        android:id = "@+id/text_set_filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/set_filter"
        android:textColor="?attr/text_color"
        android:layout_marginStart="@dimen/margin_20"
        android:layout_marginTop="15dp"
        android:textFontWeight="500"
        android:textSize="@dimen/text_22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/job_edit_text"
        style="@style/filterEditText"
        android:textFontWeight="400"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/industry_edit_text"
        style="@style/filterEditText"
        android:textFontWeight="400"
        android:layout_marginTop="@dimen/match_constraint"
        android:hint="@string/industry"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/job_edit_text" />
    <LinearLayout
        android:id="@+id/payment_field"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_51"
        android:layout_marginTop="@dimen/margin_248"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:paddingHorizontal="@dimen/margin_16"
        android:paddingVertical="@dimen/margin_8"
        android:background="@drawable/salary_background"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id = "@+id/text_expected_salary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/expected_selary"
            android:textColor="?attr/text_hint_search"
            android:textFontWeight="400"
            android:textSize="@dimen/text_12sp"
            />
        <EditText
            android:id="@+id/salary_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_regular"
            android:inputType="text"
            android:hint="@string/enter_amount"
            android:textColorHint="?attr/text_hint_search"
            android:textSize="@dimen/text_16sp"
            android:textColor="?attr/text_hint_search"
            android:textFontWeight="400"
            android:background="@null"
            android:singleLine="true"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/no_salary_checkbox"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:layout_marginTop="@dimen/margin_323"
        android:paddingHorizontal="@dimen/margin_16"
        android:orientation="horizontal"
        android:gravity="start|center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id = "@+id/text_no_salary"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/ys_display_regular"
            android:text="@string/do_not_show_without_salary"
            android:textColor="?attr/text_color"
            android:textFontWeight="400"
            android:textSize="@dimen/text_16sp"
          />
        <CheckBox
            android:layout_width="@dimen/margin_18"
            android:layout_height="@dimen/margin_18"
            android:buttonTint="@color/blue"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>