<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="@dimen/margin_9"
    android:layout_marginHorizontal="@dimen/margin_16"
    >

    <ImageView
        android:id="@+id/company_logo"
        android:layout_width="@dimen/pic_size_48"
        android:layout_height="@dimen/pic_size_48"
        android:src="@drawable/placeholder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_vacancy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="60dp"
        />

    <TextView
        android:id="@+id/vacancy_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:maxLines="3"
        android:singleLine="false"
        android:fadingEdge="horizontal"
        android:text="@string/vacancy_placeholder"
        app:fontFamily="@font/ys_display_medium"
        app:textFontWeight="500"
        app:layout_constraintStart_toEndOf="@+id/left_guideline_vacancy"
        app:layout_constraintTop_toTopOf="parent"
        app:textSize="@dimen/text_22sp" />
    <TextView
        android:id="@+id/oto"
        android:gravity="start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/departament"
        app:fontFamily="@font/ys_display_regular"
        app:textFontWeight="400"
        app:layout_constraintStart_toEndOf="@+id/left_guideline_vacancy"
        app:layout_constraintTop_toBottomOf="@id/vacancy_description"
        app:textSize="@dimen/text_16sp" />

    <TextView
        android:id="@+id/zp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/money"
        app:fontFamily="@font/ys_display_regular"
        app:textFontWeight="400"
        app:layout_constraintStart_toEndOf="@+id/left_guideline_vacancy"
        app:layout_constraintTop_toBottomOf="@id/oto"
        app:textSize="@dimen/text_16sp" />

</androidx.constraintlayout.widget.ConstraintLayout>