<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:background="?attr/background">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/margin_8"
        app:contentInsetStart="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/back_btn40"
            tools:contentDescription="back_btn" />

        <TextView
            style="@style/Text_Medium_22_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/select_job"
            android:textColor="?attr/black_to_white_color" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/country_text_field"
        style="@style/filterTextField"
        android:hint="@string/country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_edit_text"
            style="@style/filterEditText2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_country"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:backgroundTint="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/country_text_field" />

    <ImageButton
        android:id="@+id/country_clear_btn"
        android:layout_width="@dimen/margin_24"
        android:layout_height="@dimen/margin_24"
        android:background="@null"
        android:src="@drawable/arrow_forward"
        app:layout_constraintEnd_toEndOf="@+id/country_text_field"
        app:layout_constraintTop_toTopOf="@+id/country_text_field"
        app:layout_constraintBottom_toBottomOf="@+id/country_text_field"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/region_text_field"
        style="@style/filterTextField"
        android:layout_marginTop="0dp"
        android:hint="@string/region"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/country_text_field">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/region_edit_text"
            style="@style/filterEditText2" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_region"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:backgroundTint="@color/transparent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/region_text_field" />

    <ImageButton
        android:id="@+id/region_clear_btn"
        android:layout_width="@dimen/margin_24"
        android:layout_height="@dimen/margin_24"
        android:background="@null"
        android:src="@drawable/arrow_forward"
        app:layout_constraintEnd_toEndOf="@+id/region_text_field"
        app:layout_constraintTop_toTopOf="@+id/region_text_field"
        app:layout_constraintBottom_toBottomOf="@+id/region_text_field"/>

    <Button
        android:id="@+id/btn_choose"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:layout_marginHorizontal="@dimen/margin_17"
        android:layout_marginBottom="@dimen/margin_24"
        style="@style/Text_Medium_16_500"
        android:background="@drawable/select_btn_background"
        android:text="@string/select"
        android:textColor="@color/yp_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>