<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/background"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginStart="@dimen/margin_8"
        app:contentInsetStart="@dimen/match_constraint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:src="@drawable/back_btn40"
            tools:contentDescription="back_btn" />

        <TextView
            style="@style/Text_Medium_22_500"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/select_industry"
            android:textColor="?attr/black_to_white_color" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/industry_edit_text"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_56"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:background="@drawable/rounded_search_edit_text"
        android:focusableInTouchMode="true"
        android:hint="@string/enter_industry"
        android:imeOptions="actionDone|flagNoExtractUi"
        android:inputType="text"
        android:lines="1"
        android:paddingLeft="@dimen/margin_16"
        android:singleLine="true"
        android:textColor="@color/yp_black"
        android:textColorHint="?attr/text_hint_search"
        android:textCursorDrawable="@drawable/cursor_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/icon_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_search"
        app:layout_constraintEnd_toEndOf="@+id/industry_edit_text"
        app:layout_constraintTop_toTopOf="@+id/industry_edit_text"
        app:layout_constraintBottom_toBottomOf="@+id/industry_edit_text"/>

    <ImageView
        android:id="@+id/nothing_search_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/placeholder_cat"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_16"
        app:layout_constraintBottom_toTopOf="@+id/nothing_search_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/nothing_search_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text_Medium_22_500"
        android:text="@string/error_wrong_industry"
        android:textColor="?attr/text_color"
        android:gravity="center"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nothing_search_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageView
        android:id = "@+id/no_internet_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src = "@drawable/placeholder_carpet"
        android:visibility="gone"
        android:layout_marginBottom="@dimen/margin_16"
        app:layout_constraintBottom_toTopOf="@+id/no_internet_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/no_internet_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Text_Medium_22_500"
        android:gravity="center"
        android:text="@string/error_get_list"
        android:textColor="?attr/text_color"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no_internet_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/industry_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/industry_edit_text" />

    <Button
        android:id="@+id/select_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/margin_60"
        android:layout_marginHorizontal="@dimen/margin_17"
        android:layout_marginBottom="@dimen/margin_24"
        style="@style/Text_Medium_16_500"
        android:background="@drawable/select_btn_background"
        android:text="@string/select"
        android:textColor="@color/yp_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>